cmake_minimum_required(VERSION 3.9)
project(Mivne_Wet2)

set(CMAKE_CXX_STANDARD 98)

add_executable(mivne
        minHeap.h
        dynamicHash_LinkedList.h
        Gladiator.cpp
        Gladiator.h
        GrandArena.h
        GrandArena.cpp
        Group.h
        Group.cpp
        IDNode.h
        IDNode.cpp
        library2.h
        library2.cpp
        LinkedList.h
        LvlNode.h
        LvlNode.cpp
        main2.cpp
        Ranked_Tree.h
        SPlay_Tree.h
        )